--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,51 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.ksra_handygo">
+
+    <!-- ✅ Internet permission added correctly -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Ksrahandygo">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <!-- ✅ Launch activity -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Ksrahandygo">
+            android:name=".auth.AuthActivity"
+            android:exported="true">
+
+            <!-- Launch screen -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-    </application>
 
+            <!-- ✅ Handle Cognito redirect back into app -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Must exactly match your Cognito callback URI -->
+                <data
+                    android:scheme="ksrafisherman"
+                    android:host="callback" />
+            </intent-filter>
+        </activity>
+
+        <!-- ✅ AppAuth internal redirect handler (required by AppAuth library) -->
+        <activity
+            android:name="net.openid.appauth.RedirectUriReceiverActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="ksrafisherman"
+                    android:host="callback" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
