--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,42 +1,28 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ksra_handygo">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- ✅ Internet permission added correctly -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
-        <!-- ✅ Launch activity -->
+        <!-- MainActivity is now the launcher -->
         <activity
-            android:name=".auth.AuthActivity"
+            android:name="com.ksra_handygo.MainActivity"
             android:exported="true">
-
-            <!-- Launch screen -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-            <!-- ✅ Handle Cognito redirect back into app -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <!-- Must exactly match your Cognito callback URI -->
-                <data
-                    android:scheme="ksrafisherman"
-                    android:host="callback" />
-            </intent-filter>
         </activity>
 
-        <!-- ✅ AppAuth internal redirect handler (required by AppAuth library) -->
+        <!-- Redirect handler for Cognito Hosted UI -->
         <activity
-            android:name="net.openid.appauth.RedirectUriReceiverActivity"
-            android:exported="true">
+            android:name="com.ksra_handygo.auth.AuthRedirectHandlerActivity"
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
